--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Abiotic Food Calculator</h1>
-    Inspired by <a href="https://www.supercook.com">SuperCook</a>
+    <h5>Inspired by <a href="https://www.supercook.com">SuperCook</a></h5>
     <div id="options">
         <label><input type="checkbox" id="canMakeSoup" checked> Can Make Soup</label>
         <label><input type="checkbox" id="havePot" checked> Have Pot</label>
