--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abiotic Food Calculator</title>
+    <title>AbioticChef</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Abiotic Food Calculator</h1>
+    <h1>AbioticChef</h1>
     <h5>Inspired by <a href="https://www.supercook.com">SuperCook</a></h5>
     <div id="options">
         <label><input type="checkbox" id="canMakeSoup" checked> Can Make Soup</label>
